--- a/style.css
+++ b/style.css
@@ -211,7 +211,8 @@ footer#alert{
   background-color: var(--color-danger);
   border-radius: .75rem;
   padding: .75rem;
-  min-width: 20.4375rem;
+  max-width: 28.125rem;
+  width: calc(100% - 4rem);
 
   & > div{
     display: flex;
@@ -248,6 +249,6 @@ footer#alert{
   }
   
   footer#alert{
-    width: 39.1875rem;
+    max-width: 39.1875rem;
   }
 }
