--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ ul#shoppingList{
 
       & > input[type="checkbox"]{
         all: unset;
+        cursor: pointer;
         outline: .0625rem solid var(--border-primary);
         border-radius: .375rem;
 
@@ -192,6 +193,14 @@ ul#shoppingList{
 
       & > label{
         color: var(--content-secondary);
+        cursor: pointer;
+      }
+
+      &:has(:checked){
+        & > label{
+          text-decoration: line-through;
+          opacity: .65;
+        }
       }
     }
   }
